test: Update test containers